...
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hjC-3F-mdB">
                    <rect key="frame" x="168.5" y="240" width="38" height="30"/>
                    <state key="normal" title="Login"/>
                    <connections>
                        <action selector="loginTakeAction:" destination="-1" eventType="touchUpInside" id="ZBQ-4Z-CMW"/>
                    </connections>
                </button>
                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rPp-Pv-4bG">
                    <rect key="frame" x="40" y="310" width="295" height="200"/>
...
                    <connections>
                        <action selector="dimssTakeAction:" destination="-1" eventType="touchUpInside" id="y72-Hx-Nw0"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FUd-2H-Ffz">
                    <rect key="frame" x="164" y="570" width="47" height="30"/>
                    <state key="normal" title="Reload"/>
                    <connections>
                        <action selector="reloadAction:" destination="-1" eventType="touchUpInside" id="Bh5-hg-rgl"/>
                    </connections>
                </button>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oX4-PZ-QgU">
                    <rect key="frame" x="40" y="100" width="295" height="30"/>
...
